--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.1.4",
-    "jsonwebtoken": "^8.5.1",
-    "bcrypt": "^5.0.1",
     "axios": "^0.24.0",
-    "morgan":"*",
-    "helmet":"*",
-    "cors":"*"
+    "bcrypt": "^5.0.1",
+    "cors": "*",
+    "dotenv": "^16.3.1",
+    "express": "^4.17.1",
+    "helmet": "*",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.4",
+    "morgan": "*",
+    "nodemailer": "^6.9.3",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "jest": "^27.4.7",
     "eslint": "^8.5.0",
-    "nodemon":"*"
+    "jest": "^27.4.7",
+    "nodemon": "*"
   }
 }
-
